--- a/IW/UD1/anchofijoEJ.html
+++ b/IW/UD1/anchofijoEJ.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="anchofijoEJ.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,14 +20,16 @@
     </header>
     <main>
         <div class="main-content">
-            <p class="main-content__p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quae ducimus inventore cum nobis nesciunt odit omnis perspiciatis ab est quisquam dolorem recusandae neque placeat distinctio, cumque totam sapiente delectus.</p>
-        </div>
-        <div class="main-content">
-            <p class="main-content__p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque doloribus porro ipsa praesentium nam, expedita quasi cupiditate numquam animi sint exercitationem, laborum ullam. Aut repudiandae voluptates quaerat consectetur perspiciatis quod!</p>
-        </div>
-        <div class="main-content">
-            <p class="main-content__p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, dolores consequuntur rem doloribus animi quae repellat eum sint. Veritatis voluptate magnam amet fuga explicabo eum ducimus quaerat commodi eaque quibusdam?</p>
-        </div>
+            <div class="main-content__left">
+                <p class="main-content__left-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quae ducimus inventore cum nobis nesciunt odit omnis perspiciatis ab est quisquam dolorem recusandae neque placeat distinctio, cumque totam sapiente delectus.</p>
+            </div>
+            <div class="main-content__center">
+                <p class="main-content__center-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque doloribus porro ipsa praesentium nam, expedita quasi cupiditate numquam animi sint exercitationem, laborum ullam. Aut repudiandae voluptates quaerat consectetur perspiciatis quod!</p>
+            </div>
+            <div class="main-content__right">
+                <p class="main-content__right-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, dolores consequuntur rem doloribus animi quae repellat eum sint. Veritatis voluptate magnam amet fuga explicabo eum ducimus quaerat commodi eaque quibusdam?</p>
+            </div>
+        
     </main>
     <footer>
         <p class="footer-p">Todos los derechos reservados</p>
